# zealot

./: .gitignore  Cargo.toml  README.md  crates.js  cuda_gather_check.rs  help.html  index.html  search-index.js  settings.html  src-files.js
.githooks/: pre-commit  pre-push
assets/robots/: unitree_g1_12dof.xml  unitree_g1_29dof.xml  unitree_h2_plus_12dof.xml
docs/: metal-contact-bug-proposal.md  native-cuda-4090-test.md  train-on-5090.md  train-on-macos.md  vast-cuda-build-log.md
docs/nexus-cuda-patches/: 0001-perf-rbd-per-env-parallelism-capture-safe-dispatch-b.patch  0002-perf-rbd-cooperative-PGS-solves-integrate-threads-32.patch
examples/: cuda_gather_check.rs  elu_check.rs  gemm_shapes_bench.rs  gemm_vec4_check.rs  gpu_update_bench.rs  gpu_update_check.rs  layout_solve_bench.rs  linear_forward.rs  mlp_backward.rs  mlp_backward_batch.rs  mlp_forward.rs  obs_check.rs  policy_forward_bench.rs  ppo_grad_check.rs  reward_check.rs  sample_check.rs  train_regression.rs
examples/attic/: sample_check.rs
examples/biped/: GENESIS_BENCHMARK.md  bench_genesis_rollout.py  bench_genesis_sweep.sh  bench_genesis_train.py  biped_drive.rs  biped_env.rs  biped_env_nexus.rs  biped_footcheck.rs  biped_fps.rs  biped_genesis_common.py  biped_mjcf.rs  biped_nexus.rs  biped_render.rs  biped_render_nexus.rs  biped_smoke.rs  biped_smoke_cpu.rs  biped_train.rs  biped_train_gpu.rs  biped_train_nexus.rs  contact_probe.rs  critic_divergence.py  cross_engine_eval.py  cross_engine_eval_genesis.py  cutile_gemm.rs  export_onnx.py  foot_rotation_xval.py  foot_tip_stability.rs  foot_tip_stability_newton.py  genesis_biped_env.py  gpu_policy.rs  iter_e2e_bench.rs  iter_e2e_boxes_bench.rs  motor_step_compare.py  mujoco_passive_stand.py  passive_stand.rs  physics_capture_bench.rs  ppo_grad_parity.rs  render_biped.py  render_biped_mujoco.py  render_foot_tip.py  (+12 more)
examples/pendulum/: README.md  inverted_pendulum.rs  pendulum2dof.rs  pendulum_batch.rs  pendulum_gpu_policy.rs  pendulum_learn.rs  pendulum_pg.rs  pendulum_ppo.rs  pendulum_reset.rs  pendulum_smoke.rs  render_pend2dof.py  render_pendulum3d.py  render_video.py
overnight/: run_agile_fullbody.sh  run_agile_rewards.sh
search.desc/zealot/: zealot-desc-0-.js
src/: lib.rs
src/zealot/: lib.rs.html
tools/: convert_unitree_biped.py  pull_agile_actuators.py
zealot/: all.html  index.html  sidebar-items.js
zealot-env/: Cargo.toml
zealot-env/examples/: env_loop.rs
zealot-env/src/: config.rs  lib.rs  math.rs  obs_history.rs  rng.rs  terrain.rs
zealot-env/src/robots/: lerobot_bipedal.rs  mod.rs  unitree_g1.rs  unitree_h2_plus.rs
zealot-env/src/tasks/: mod.rs  velocity_flat.rs
zealot-env/tests/: agile_parity.rs
zealot-env/tests/data/: agile_g1_actuators.rs
zealot-rl/: Cargo.toml
zealot-rl/examples/: linear_forward.rs  mlp_backward.rs  mlp_forward.rs  train_regression.rs
zealot-rl/src/: lib.rs  net.rs  ppo.rs  rng.rs
zealot/guides/: index.html  sidebar-items.js
zealot/guides/train_on_5090/: index.html
zealot/guides/train_on_macos/: index.html
