[workspace]
resolver = "2"
members = ["zealot-env", "zealot-rl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
zealot-env = { path = "zealot-env" }
zealot-rl = { path = "zealot-rl" }

# The workspace root is also a package: it hosts the runnable examples that
# exercise the GPU learning stack (vortx + khal). The examples don't depend on
# zealot-rl yet — they validate the vortx forward/backward/Adam primitives that
# zealot-rl's policy + PPO will be built on.
[package]
name = "zealot"
version.workspace = true
edition.workspace = true
license.workspace = true

# Everything that touches the GPU is gated behind a feature (all off by default)
# because the dimforge stack — vortx and nexus3d — compiles rust-gpu shaders via
# cargo-gpu, which needs a special toolchain. Keeping it optional lets
# `cargo check --workspace` stay green for anyone without that toolchain.
#
#   gpu      — vortx (dimforge's GPU tensor lib): hand-rolled MLP forward/backward
#              + Adam (vortx has no autograd). Used by the tensor examples.
#   pendulum — nexus3d GPU rigid-body physics + rapier3d (CPU-side scene build).
#              Used by the pendulum examples under examples/pendulum/.
#
# vortx/khal/rapier3d are taken from crates.io but redirected to local dimforge
# forks by [patch.crates-io] below — the same forks nexus3d is built against.
[features]
default = []
gpu = ["dep:vortx", "dep:khal"]
pendulum = ["dep:nexus3d", "dep:rapier3d", "dep:pollster", "dep:khal"]
# biped — the LeRobot bipedal on nexus GPU physics + the URDF loader
# (rapier3d-urdf, stl meshes → cheap Obb colliders). Used by the GPU biped examples.
biped = ["pendulum", "dep:rapier3d-urdf", "dep:zealot-env"]
# cpu — the LeRobot bipedal on rapier's CPU multibody (mature floating-base +
# contacts). No nexus / cargo-gpu needed, so it builds and runs on any machine.
# Includes the MuJoCo-XML model loader (roxmltree) — the curated standing model.
cpu = ["dep:rapier3d", "dep:rapier3d-urdf", "dep:zealot-env", "dep:zealot-rl", "dep:roxmltree", "dep:rayon"]
# biped_gpu — biped on nexus GPU physics, MJCF model. Pulls zealot-rl so the
# nexus trainer can build (the smoke example doesn't need it, but it's a
# negligible link-time addition).
biped_gpu = ["pendulum", "dep:roxmltree", "dep:zealot-env", "dep:zealot-rl", "dep:rayon"]
# cuda_backend — additively enables the native-CUDA (cuda-oxide) khal backend on
# the vortx + nexus3d stack, alongside WebGPU. Selected at runtime via BIPED_CUDA=1.
# Used for the all-native end-to-end benchmark (iter_e2e_bench). The cubins are
# embedded at build time via CUDA_OXIDE_SHADERS_PTX_{NEXUS_RBD_SHADERS3D,VORTX_SHADERS}.
cuda_backend = ["gpu", "biped_gpu", "khal/cuda", "nexus3d/cuda", "vortx/cuda"]

[dependencies]
vortx = { version = "0.1", optional = true }
khal = { version = "0.1", features = ["derive", "webgpu"], optional = true }
nexus3d = { path = "../nexus-cuda/crates/nexus3d", features = ["rbd", "from_rapier"], optional = true }
rapier3d = { version = "0.32", optional = true }
rapier3d-urdf = { path = "../rapier/crates/rapier3d-urdf", features = ["stl"], optional = true }
roxmltree = { version = "0.20", optional = true }
rayon = { version = "1", optional = true }
pollster = { version = "0.4", optional = true }
zealot-env = { workspace = true, optional = true }
zealot-rl = { workspace = true, optional = true }

[dev-dependencies]
nalgebra = "0.34"
wgpu = "29"
async-std = { version = "1", features = ["attributes"] }
anyhow = "1"

# Tensor examples — vortx forward/backward/Adam primitives (`--features gpu`).
[[example]]
name = "linear_forward"
required-features = ["gpu"]

[[example]]
name = "mlp_forward"
required-features = ["gpu"]

[[example]]
name = "elu_check"
required-features = ["gpu"]

[[example]]
name = "policy_forward_bench"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "mlp_backward_batch"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "gemm_vec4_check"
required-features = ["gpu"]

[[example]]
name = "ppo_grad_check"
required-features = ["gpu"]

[[example]]
name = "sample_check"
required-features = ["gpu"]

[[example]]
name = "obs_check"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "reward_check"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "gpu_update_check"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "gpu_update_bench"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "rollout_bench"
path = "examples/biped/rollout_bench.rs"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "rollout_e2e_bench"
path = "examples/biped/rollout_e2e_bench.rs"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "iter_e2e_bench"
path = "examples/biped/iter_e2e_bench.rs"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "cuda_gather_check"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "iter_e2e_boxes_bench"
path = "examples/biped/iter_e2e_boxes_bench.rs"
required-features = ["gpu", "biped_gpu"]

[[example]]
name = "mlp_backward"
required-features = ["gpu"]

[[example]]
name = "train_regression"
required-features = ["gpu"]

# Pendulum examples — nexus3d GPU rigid-body env (`--features pendulum`). Ported
# verbatim from nexus-rl's `pendulum_headless` crate; they drive nexus3d directly
# (not via zealot-env/zealot-rl yet). pendulum_gpu_policy also needs `gpu` (vortx).
[[example]]
name = "pendulum_smoke"
path = "examples/pendulum/pendulum_smoke.rs"
required-features = ["pendulum"]

[[example]]
name = "inverted_pendulum"
path = "examples/pendulum/inverted_pendulum.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum2dof"
path = "examples/pendulum/pendulum2dof.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_batch"
path = "examples/pendulum/pendulum_batch.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_reset"
path = "examples/pendulum/pendulum_reset.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_learn"
path = "examples/pendulum/pendulum_learn.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_pg"
path = "examples/pendulum/pendulum_pg.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_ppo"
path = "examples/pendulum/pendulum_ppo.rs"
required-features = ["pendulum"]

[[example]]
name = "pendulum_gpu_policy"
path = "examples/pendulum/pendulum_gpu_policy.rs"
required-features = ["pendulum", "gpu"]

# Biped examples — the LeRobot bipedal on nexus (`--features biped`).
[[example]]
name = "biped_smoke"
path = "examples/biped/biped_smoke.rs"
required-features = ["biped"]

# CPU biped — rapier multibody, no GPU toolchain (`--features cpu`).
[[example]]
name = "biped_smoke_cpu"
path = "examples/biped/biped_smoke_cpu.rs"
required-features = ["cpu"]

# CPU biped from the curated MuJoCo XML model (`--features cpu`).
[[example]]
name = "biped_mjcf"
path = "examples/biped/biped_mjcf.rs"
required-features = ["cpu"]

# Train flat velocity tracking on the CPU MJCF biped (`--features cpu`).
[[example]]
name = "biped_train"
path = "examples/biped/biped_train.rs"
required-features = ["cpu"]

# Record a deterministic rollout to JSON for rendering (`--features cpu`).
[[example]]
name = "biped_render"
path = "examples/biped/biped_render.rs"
required-features = ["cpu"]

# Retry: biped on nexus GPU physics from the MJCF model (`--features biped_gpu`).
[[example]]
name = "biped_nexus"
path = "examples/biped/biped_nexus.rs"
required-features = ["biped_gpu"]

# Train flat velocity tracking on the nexus GPU biped (vectorized N-env batch).
[[example]]
name = "biped_train_nexus"
path = "examples/biped/biped_train_nexus.rs"
required-features = ["biped_gpu"]

# Train briefly on nexus then record a deterministic env-0 rollout to JSON.
# Render with `python3 examples/biped/render_biped.py <out.json> <out.mp4>`.
[[example]]
name = "biped_render_nexus"
path = "examples/biped/biped_render_nexus.rs"
required-features = ["biped_gpu", "gpu"]

# Local dimforge forks — mirrors nexus-rl's workspace patch table so nexus3d
# (and vortx) resolve to the exact sources they're built against there. zealot
# and nexus-rl are sibling checkouts under the same parent dir, so the relative
# paths match. Only consulted when a GPU feature pulls these crates into the graph.
[patch.crates-io]
khal = { path = "../khal/crates/khal" }
khal-derive = { path = "../khal/crates/khal-derive" }
khal-std = { path = "../khal/crates/khal-std" }
khal-builder = { path = "../khal/crates/khal-builder" }
vortx = { path = "../vortx" }
vortx-shaders = { path = "../vortx/vortx-shaders" }
parry3d = { path = "../parry/crates/parry3d" }
rapier3d = { path = "../rapier/crates/rapier3d" }

# Probe rapier foot–ground contact (`--features cpu`).
[[example]]
name = "biped_footcheck"
path = "examples/biped/biped_footcheck.rs"
required-features = ["cpu"]

# FPS benchmark: rapier CPU multibody vs nexus GPU physics (same N envs).
[[example]]
name = "biped_fps"
path = "examples/biped/biped_fps.rs"
required-features = ["cpu", "biped_gpu"]

# Minimal physics-only repro for dimforge/rapier#934 — drop a foot-shaped box at
# various edge/corner tilts and observe whether it tips flat under gravity.
[[example]]
name = "foot_tip_stability"
path = "examples/biped/foot_tip_stability.rs"
required-features = ["cpu"]
